# negative_classification

./: .gitignore  Dockerfile  README.md  proceeding.ipynb  pyproject.toml  requirements.txt
negative_classification/: __init__.py  config.py  data.py  model.py  model_conversion.py  train.py
negative_classification/conf/: config.yaml
negative_classification/dataset/: .gitignore  Addition.xlsx.dvc  ds_nlp.xlsx.dvc  neg_text.txt.dvc
negative_classification/models/: bpe_200.yttm  bpe_300.yttm  bpe_400.yttm  bpe_500.yttm  bpe_800.yttm
